# ZKFingerPrintReader

./: CMakeLists.txt
libs/x64/: libzkfp.def
src/: FingerprintDevice.cpp  FingerprintDevice.h  GuiDemo.cpp  main.cpp
